practicas estiquetas video

--- a/cursohtmlycss/comprasdelsuper/index.html
+++ b/cursohtmlycss/comprasdelsuper/index.html
@@ -7,7 +7,7 @@
         <title>compras del súper</title>
     </head>
     <body>
-        <h1>Soy la lista </h1>
+        <h1>i'm a list </h1>
         <ul>
             <li>fruits</li>
                 <ol>
