--- a/cursohtmlycss/etiquetaimg/index.html
+++ b/cursohtmlycss/etiquetaimg/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>cats.com</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <section>
             <figure>
                 <img src="./imagenes de prueba/pexels-toga-4862658 (1).jpg" alt="it's a beutiful cat"/>
-                <figcaption>this cat was dead but, for the incredible power of Jesus it's alive again</figcaption>
+                <figcaption class="texto">this cat was dead but, for the incredible power of Jesus it's alive again</figcaption>
             </figure>
         </section>
     </main>
